[package]
name = "oxibot"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
target_cpu = "native"
panic = "abort"

[dependencies]
serenity = "~0.7.1"
