[package]
name = "oxibot"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
serenity = "~0.9.2"
once_cell = "1.4"
time = "0.2"
tokio = { version = "0.2", features = ["macros"] }